chore(labels.yml): Rename AiTextFilter to AiTextAlter label
Signed-off-by: Marc Roca-Musach <49920661+marc-romu@users.noreply.github.com>

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -89,9 +89,9 @@
 - name: "component: AI TextCheck"
   color: "000"
   description: "Issues related to the AI TextCheck component"
-- name: "component: AI TextFilter"
+- name: "component: AI TextAlter"
   color: "000"
-  description: "Issues related to the AI TextFilter component"
+  description: "Issues related to the AI TextAlter component"
 - name: "component: AI TextGenerate"
   color: "000"
   description: "Issues related to the AI TextGenerate component"
