refactor(ailistfilter): Renamed AIListAlter to AIListFilter

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -98,9 +98,9 @@
 - name: "component: AI ListCheck"
   color: "000"
   description: "Issues related to the AI ListCheck component"
-- name: "component: AI ListAlter"
+- name: "component: AI ListFilter"
   color: "000"
-  description: "Issues related to the AI ListAlter component"
+  description: "Issues related to the AI ListFilter component"
 - name: "component: AI ListGenerate"
   color: "000"
   description: "Issues related to the AI Generate component"
