--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -86,18 +86,15 @@
 - name: "component: AI Chat"
   color: "000"
   description: "Issues related to the Chat component"
-- name: "component: AI TextCheck"
+- name: "component: AI TextEvaluate"
   color: "000"
-  description: "Issues related to the AI TextCheck component"
-- name: "component: AI TextAlter"
-  color: "000"
-  description: "Issues related to the AI TextAlter component"
+  description: "Issues related to the AI TextEvaluate component"
 - name: "component: AI TextGenerate"
   color: "000"
   description: "Issues related to the AI TextGenerate component"
-- name: "component: AI ListCheck"
+- name: "component: AI ListEvaluate"
   color: "000"
-  description: "Issues related to the AI ListCheck component"
+  description: "Issues related to the AI ListEvaluate component"
 - name: "component: AI ListFilter"
   color: "000"
   description: "Issues related to the AI ListFilter component"
