--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.0.0-dev.250127</SolutionVersion>
+    <SolutionVersion>0.1.0-alpha</SolutionVersion>
   </PropertyGroup>
 </Project>
