--- a/.github/workflows/milestone-release.yml
+++ b/.github/workflows/milestone-release.yml
@@ -13,7 +13,7 @@ jobs:
       pull-requests: read
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
         with:
           fetch-depth: 0
           ref: main # Checkout the main branch
@@ -28,7 +28,7 @@ jobs:
 
       - name: Get Closed Issues
         id: issues
-        uses: actions/github-script@v7
+        uses: actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410 # v7
         with:
           script: |
             const milestone_number = context.payload.milestone.number;
