--- a/.github/workflows/pull-request-validation.yml
+++ b/.github/workflows/pull-request-validation.yml
@@ -10,7 +10,7 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v3
 
       # Version Check
       - name: Validate Version in Solution.props
@@ -23,7 +23,7 @@ jobs:
 
       # Changelog Validation
       - name: Check CHANGELOG.md is Updated
-        uses: tj-actions/changed-files@v41
+        uses: tj-actions/changed-files@d6e91a2266cdb9d62096cebf1e8546899c6aa18f # v45.0.6
         id: changelog-check
         with:
           files: CHANGELOG.md
