chore(update-version-badge)

--- a/.github/workflows/update-version-badge.yml
+++ b/.github/workflows/update-version-badge.yml
@@ -79,14 +79,14 @@ jobs:
         # Create backup of README
         cp README.md README.md.bak
 
-        # Update badges in README with more precise patterns
-        sed -i -E 's|!\[Version\]\(https://img\.shields\.io/badge/version-[^-]*-[^)]*\)|![Version](https://img.shields.io/badge/version-'"${SHIELDS_VERSION}"'-'"${STATUS_COLOR}"')|g' README.md
+        # Update badges in README with exact pattern matching
+        sed -i -E 's|!\[Version\]\(https://img\.shields\.io/badge/version-[^)]+\)|![Version](https://img.shields.io/badge/version-'"${SHIELDS_VERSION}"'-'"${STATUS_COLOR}"')|' README.md
         if [ $? -ne 0 ]; then
           echo "Error: Failed to update version badge"
           exit 1
         fi
 
-        sed -i -E 's|!\[Status\]\(https://img\.shields\.io/badge/status-[^-]*-[^)]*\)|![Status](https://img.shields.io/badge/status-'"${STATUS}"'-'"${STATUS_COLOR}"')|g' README.md
+        sed -i -E 's|!\[Status\]\(https://img\.shields\.io/badge/status-[^)]+\)|![Status](https://img.shields.io/badge/status-'"${STATUS}"'-'"${STATUS_COLOR}"')|' README.md
         if [ $? -ne 0 ]; then
           echo "Error: Failed to update status badge"
           exit 1
