--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.1.0-alpha</SolutionVersion>
+    <SolutionVersion>0.1.1-dev.250212</SolutionVersion>
   </PropertyGroup>
 </Project>
