--- a/src/SmartHopper.Config/SmartHopper.Config.csproj
+++ b/src/SmartHopper.Config/SmartHopper.Config.csproj
@@ -14,6 +14,8 @@
     <Title>SmartHopper Configuration</Title>
     <Company>Architect's Toolkit (RKTK.tools) + SmartHopper Community</Company>
     <Description>Menu and settings management for SmartHopper</Description>
+    <Authors>Marc Roca Musach + SmartHopper Community</Authors>
+    <Copyright>Copyright (c) 2024 Marc Roca Musach</Copyright>
   </PropertyGroup>
 
   <PropertyGroup>
