--- a/src/SmartHopper.Core/SmartHopper.Core.csproj
+++ b/src/SmartHopper.Core/SmartHopper.Core.csproj
@@ -14,6 +14,8 @@
     <Title>SmartHopper Core</Title>
     <Company>Architect's Toolkit (RKTK.tools) + SmartHopper Community</Company>
     <Description>Core functionality for SmartHopper</Description>
+    <Authors>Marc Roca Musach + SmartHopper Community</Authors>
+    <Copyright>Copyright (c) 2024 Marc Roca Musach</Copyright>
   </PropertyGroup>
 
   <PropertyGroup>
