--- a/src/SmartHopper.Menu/SmartHopper.Menu.csproj
+++ b/src/SmartHopper.Menu/SmartHopper.Menu.csproj
@@ -15,6 +15,8 @@
     <Title>SmartHopper Menu</Title>
     <Company>Architect's Toolkit (RKTK.tools) + SmartHopper Community</Company>
     <Description>Menu management for SmartHopper</Description>
+    <Authors>Marc Roca Musach + SmartHopper Community</Authors>
+    <Copyright>Copyright (c) 2024 Marc Roca Musach</Copyright>
   </PropertyGroup>
 
   <PropertyGroup>
