--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -54,30 +54,45 @@
 - name: "component: GhGet"
   color: "000"
   description: "Issues related to the Grasshopper To GhJSON component"
+- name: "component: GhGetSelected"
+  color: "000"
+  description: "Issues related to the Grasshopper Get Selected Components component"
 - name: "component: GhPut"
   color: "000"
   description: "Issues related to the GhJSON To Grasshopper component"
 - name: "component: AI GhGenerate"
   color: "000"
-  description: "Issues related to the GhJSON Generator component"
+  description: "Issues related to the AI Grasshopper Generate Definitions component"
 - name: "component: AI Chat"
   color: "000"
   description: "Issues related to the Chat component"
 - name: "component: AI TextEvaluate"
   color: "000"
-  description: "Issues related to the AI TextEvaluate component"
+  description: "Issues related to the AI Text Evaluate component"
 - name: "component: AI TextGenerate"
   color: "000"
-  description: "Issues related to the AI TextGenerate component"
+  description: "Issues related to the AI Text Generate component"
 - name: "component: AI ListEvaluate"
   color: "000"
-  description: "Issues related to the AI ListEvaluate component"
+  description: "Issues related to the AI List Evaluate component"
 - name: "component: AI ListFilter"
   color: "000"
-  description: "Issues related to the AI ListFilter component"
+  description: "Issues related to the AI List Filter component"
 - name: "component: AI ListGenerate"
   color: "000"
-  description: "Issues related to the AI ListGenerate component"
+  description: "Issues related to the AI List Generate component"
 - name: "component: Deconstruct Metrics"
   color: "000"
   description: "Issues related to the Deconstruct Metrics component"
+- name: "component: AI GroupTitle"
+  color: "000"
+  description: "Issues related to the AI GroupTitle component"
+- name: "component: AI Context"
+  color: "000"
+  description: "Issues related to the AI Context component"
+- name: "component: SaveGhJSON"
+  color: "000"
+  description: "Issues related to the Save GhJSON file component"
+- name: "component: LoadGhJSON"
+  color: "000"
+  description: "Issues related to the Load GhJSON file component"
