feat(component): add new AI Chat component

--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.1.1-alpha</SolutionVersion>
+    <SolutionVersion>0.1.2-dev.250303</SolutionVersion>
   </PropertyGroup>
 </Project>
