chore(repo): added AI Chat Input and AI Chat Output in the list of components

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -53,19 +53,16 @@
 # Component Labels
 - name: "component: GhGet"
   color: "000"
-  description: "Issues related to the Grasshopper To GhJSON component"
+  description: "Issues related to the Grasshopper Get Components component"
 - name: "component: GhGetSelected"
   color: "000"
   description: "Issues related to the Grasshopper Get Selected Components component"
 - name: "component: GhPut"
   color: "000"
-  description: "Issues related to the GhJSON To Grasshopper component"
+  description: "Issues related to the Grasshopper Put Components component"
 - name: "component: AI GhGenerate"
   color: "000"
   description: "Issues related to the AI Grasshopper Generate Definitions component"
-- name: "component: AI Chat"
-  color: "000"
-  description: "Issues related to the Chat component"
 - name: "component: AI TextEvaluate"
   color: "000"
   description: "Issues related to the AI Text Evaluate component"
@@ -81,15 +78,24 @@
 - name: "component: AI ListGenerate"
   color: "000"
   description: "Issues related to the AI List Generate component"
-- name: "component: Deconstruct Metrics"
-  color: "000"
-  description: "Issues related to the Deconstruct Metrics component"
 - name: "component: AI GroupTitle"
   color: "000"
   description: "Issues related to the AI GroupTitle component"
 - name: "component: AI Context"
   color: "000"
   description: "Issues related to the AI Context component"
+- name: "component: AI Chat"
+  color: "000"
+  description: "Issues related to the Chat component"
+- name: "component: AI Chat Input"
+  color: "000"
+  description: "Issues related to the Chat Input component"
+- name: "component: AI Chat Output"
+  color: "000"
+  description: "Issues related to the Chat Output component"
+- name: "component: Deconstruct Metrics"
+  color: "000"
+  description: "Issues related to the Deconstruct Metrics component"
 - name: "component: SaveGhJSON"
   color: "000"
   description: "Issues related to the Save GhJSON file component"
