feat(aboutdialog): Add SmartHopper logo and set minimum dialog size

--- a/src/SmartHopper.Config/SmartHopper.Config.csproj
+++ b/src/SmartHopper.Config/SmartHopper.Config.csproj
@@ -18,6 +18,12 @@
     <Copyright>Copyright (c) 2024 Marc Roca Musach</Copyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>SmartHopper.Menu</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputPath>$(SolutionDir)bin/$(SolutionVersion)/$(Configuration)</OutputPath>
   </PropertyGroup>
